// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Stack default 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Stack
    as="div"
    className=""
    space="no-space"
  >
    <Box
      as="div"
      className=""
    >
      Lorem ipsum 1
    </Box>
    <Box
      as="div"
      className=""
    >
      Lorem ipsum 2
    </Box>
    Lorem ipsum 3
  </Stack>
</div>
`;

exports[`Storyshots Layout/Stack single item 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Stack
    as="div"
    className=""
    space="no-space"
  >
    <Box
      as="div"
      className=""
    >
      Lorem ipsum
    </Box>
  </Stack>
</div>
`;

exports[`Storyshots Layout/Stack with custom wrapper 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Stack
    as="main"
    className="wrapper"
    space="no-space"
  >
    <Box
      as="div"
      className=""
    >
      Lorem ipsum 1
    </Box>
    <Box
      as="div"
      className=""
    >
      Lorem ipsum 2
    </Box>
  </Stack>
</div>
`;

exports[`Storyshots Layout/Stack with large space 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Stack
    as="div"
    className=""
    space="large"
  >
    <Box
      as="div"
      className=""
    >
      Lorem ipsum 1
    </Box>
    <Box
      as="div"
      className=""
    >
      Lorem ipsum 2
    </Box>
    <Box
      as="div"
      className=""
    >
      Lorem ipsum 3
    </Box>
  </Stack>
</div>
`;

exports[`Storyshots Layout/Stack with nested stack 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Stack
    as="div"
    className=""
    space="large"
  >
    <Box
      as="div"
      className=""
    >
      Lorem ipsum 1
    </Box>
    <Box
      as="div"
      className=""
    >
      Lorem ipsum 2
    </Box>
    <Stack
      as="div"
      className=""
      space="small"
    >
      <Box
        as="div"
        className=""
      >
        Lorem ipsum 3.1
      </Box>
      <Box
        as="div"
        className=""
      >
        Lorem ipsum 3.2
      </Box>
    </Stack>
  </Stack>
</div>
`;
